! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
  the outer array no longer starts at 0 but reflects the real season number (as often requested)!
+ imdb::get_episode_details() - added "airdate" as requested by ticket:290
! imdb::goofs() and imdb::crazy_credits() where broken due to site changes

v2.1.2 (19.01.2012)
-------------------
! site changes broke the imdb class methods keywords(), seasons(), languages(), mpaa_reason(), goofs()
! site changes confused imdb::extReviews(), imdb::videosites()
! company info URLs were just the IMDB relative URL w/o protocol and site. Added the missing info
! if production spanned multiple years (xxxx-yyyy), movie type was setup wrongly ("type xxxx-")
+ added method imdb::endyear() for cases where production spanned multiple years. So for
  "xxxx-yyyy" this returns "yyyy", while imdb::year() is adjusted to "xxxx". Otherwise, both
  return the same year.
! imdb_topcharts::getChartsBoxOffice() was broken. Fixed thanx to hints from razor.
! imdb::episodes() was completely broken, as the entire page design and structure changed (multiple pages now)
+ added imdb::get_episode_details() to retrieve "uplink info" on episodes

v2.1.1 (19.12.2011)
-------------------
+ imdb: adding new budget class
+ imdb nowplaying: added Top-10-Boxoffice
+ movies: added method movietype to check wheter it is a movie, tv series, ...
* updated API reference
! is_serial() did always return FALSE (site-change)
* fixed a bunch of NOTICEs
! imdb::languages() had problems with some ISO settings - hopefully fixed now.
* sometimes imdb::genres() did not return all available genres

v2.1.0 (11.10.2011)
-------------------
! movieposterdb class was broken due to site changes at movieposterdb.com; applied a quick-hack to fix it
! fixes due to site changes: imdb::rating, imdb::goofs
* complete rewrite of imdb_nowplaying class (location and structure of page had changed)