@@ -11,6 +11,7 @@ v2.1.3
   the outer array no longer starts at 0 but reflects the real season number (as often requested)!
 + imdb::get_episode_details() - added "airdate" as requested by ticket:290
 ! imdb::goofs() and imdb::crazy_credits() where broken due to site changes
+* some adjustments to imdb::trivia - spoilers are now avoided by default. Pass TRUE as only argument to retrieve them separately.
 
 v2.1.2 (19.01.2012)
 -------------------
